feat: FunctionDec